Fix layout whitespace

--- a/main.css
+++ b/main.css
@@ -1,16 +1,15 @@
-html, body {
-    height: 100%;
-}
+* { border: 1px solid red; }
 
 a {
     border-top: 20px;
-    padding: 2rem;
+    padding: 0 20px 0 20px;
     font-family: 'Special Elite', cursive;
     font-size: 24px;
     color: #D9B310;
 }
 
 .top-bottom-banner {
+    flex-shrink: 0;
     text-align: center;
     line-height: 50px;
     background-color: #0B3C5D;
@@ -22,8 +21,8 @@ a {
             flex: 1 0 auto;
     text-align: center;
     background-color: #328CC1;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .portrait {
@@ -46,13 +45,8 @@ h3 {
     margin: 0;
 }
 
-footer {
-    -ms-flex-negative: 0;
-        flex-shrink: 0;
-}
-
-/* FlexBox */
 body {
+    margin-bottom: -50px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -60,10 +54,4 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-}
-
-.item {
-    -webkit-box-flex: 1;
-        -ms-flex: auto;
-            flex: auto;
 }
